Add logging settings and integrate into application
- Introduced LogSettings component to allow users to configure logging levels within the SettingsTab.
- Updated the Settings interface to include a logLevel property for persistent logging preferences.
- Enhanced the App component to initialize logging based on user-defined settings, improving troubleshooting capabilities.
- Added localization support for logging settings in multiple languages, ensuring a consistent user experience across different locales.

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -118,6 +118,18 @@
       "customFFprobePathHint": "Задайте собствен път към FFprobe",
       "ffprobeRequired": "FFprobe е необходим за анализ. Натиснете бутона за изтегляне."
     },
+    "logging": {
+      "title": "Журнали",
+      "description": "Конфигурирайте журналирането за отстраняване на проблеми",
+      "level": "Ниво на журнала",
+      "levels": {
+        "debug": "Debug (Подробно)",
+        "info": "Info (По подразбиране)",
+        "warn": "Само предупреждения",
+        "error": "Само грешки"
+      },
+      "hint": "Журналите се записват в конфигурационната папка. Използвайте Debug за диагностика."
+    },
     "validation": {
       "pathRequired": "Пътят е задължителен",
       "pathNotWritable": "Избраният път не е достъпен за запис"
