--- a/frontend/src/locales/el.json
+++ b/frontend/src/locales/el.json
@@ -118,6 +118,18 @@
       "customFFprobePathHint": "Ορίστε προσαρμοσμένη διαδρομή FFprobe",
       "ffprobeRequired": "Το FFprobe απαιτείται για ανάλυση. Πατήστε λήψη."
     },
+    "logging": {
+      "title": "Καταγραφή",
+      "description": "Ρυθμίστε την καταγραφή για αντιμετώπιση προβλημάτων",
+      "level": "Επίπεδο καταγραφής",
+      "levels": {
+        "debug": "Debug (Αναλυτικά)",
+        "info": "Info (Προεπιλογή)",
+        "warn": "Μόνο προειδοποιήσεις",
+        "error": "Μόνο σφάλματα"
+      },
+      "hint": "Τα αρχεία αποθηκεύονται στο φάκελο ρυθμίσεων. Χρησιμοποιήστε Debug για διάγνωση."
+    },
     "validation": {
       "pathRequired": "Η διαδρομή είναι υποχρεωτική",
       "pathNotWritable": "Ο επιλεγμένος φάκελος δεν είναι εγγράψιμος"
