Enhance media conversion features with trimming support
- Updated the ConverterTab component to include trim options for media conversions, allowing users to specify start and end times.
- Introduced TrimControls component for managing trim settings, including waveform visualization for audio files.
- Enhanced the API to support starting conversions with trim options, improving user experience and functionality.
- Updated localization files to include new trim-related strings for multiple languages.
- Added tests for TrimControls and updated existing tests to cover new functionality, ensuring robust performance.

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -152,6 +152,15 @@
     "presets": "Пресети за конвертиране",
     "presetsDescription": "Изберете пресет за конвертиране",
     "convert": "Започни конвертиране",
+    "convertTrimmed": "Конвертирай селекцията",
+    "trim": {
+      "title": "Изрязване на селекция",
+      "enable": "Активирай изрязване",
+      "startTime": "Начално време",
+      "endTime": "Крайно време",
+      "duration": "Избрано",
+      "reset": "Нулиране"
+    },
     "queue": "Опашка за конвертиране",
     "noJobs": "Няма активни конвертирания",
     "jobCount": "{{count}} конвертиране(я)",
