--- a/frontend/src/locales/el.json
+++ b/frontend/src/locales/el.json
@@ -152,6 +152,15 @@
     "presets": "Προεπιλογές μετατροπής",
     "presetsDescription": "Επιλέξτε προεπιλογή για μετατροπή",
     "convert": "Έναρξη μετατροπής",
+    "convertTrimmed": "Μετατροπή επιλογής",
+    "trim": {
+      "title": "Περικοπή επιλογής",
+      "enable": "Ενεργοποίηση περικοπής",
+      "startTime": "Χρόνος έναρξης",
+      "endTime": "Χρόνος λήξης",
+      "duration": "Επιλεγμένο",
+      "reset": "Επαναφορά"
+    },
     "queue": "Ουρά μετατροπής",
     "noJobs": "Δεν υπάρχουν ενεργές μετατροπές",
     "jobCount": "{{count}} μετατροπή/ές",
