Implement second instance handling and improve trim functionality
- Added support for handling second instances of the application, bringing the existing window to the front when launched.
- Updated the ConverterTab component to refine trim preset handling, ensuring waveform data is only loaded for trim presets.
- Enhanced the TrimControls component for better waveform visualization and user interaction.
- Updated localization strings for the trim-copy feature to clarify functionality across multiple languages.
- Improved the converter service to preserve original file formats during trimming, enhancing user experience.

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -231,7 +231,7 @@
       "gif-standard": "Анимиран GIF, 15 FPS, макс 480px",
       "gif-small": "Малък GIF, 10 FPS, макс 320px",
       "extract-audio": "Извличане на аудио без прекодиране",
-      "trim-copy": "Изрязване на видео без прекодиране (бързо)"
+      "trim-copy": "Изрязване без прекодиране, запазва оригиналния формат"
     }
   },
   "errors": {
