--- a/frontend/src/locales/el.json
+++ b/frontend/src/locales/el.json
@@ -231,7 +231,7 @@
       "gif-standard": "Κινούμενο GIF, 15 FPS, μέγ 480px",
       "gif-small": "Μικρό GIF, 10 FPS, μέγ 320px",
       "extract-audio": "Εξαγωγή ήχου χωρίς επανακωδικοποίηση",
-      "trim-copy": "Περικοπή βίντεο χωρίς επανακωδικοποίηση (γρήγορο)"
+      "trim-copy": "Περικοπή χωρίς επανακωδικοποίηση, διατηρεί αρχικό format"
     }
   },
   "errors": {
